removed cdn fetching of bootstrap css and js files to make sure respond.js is running out of the box for ie8 added container style to use more space

--- a/src/AnyContent/CMCK/Modules/Backend/Core/Layout/views/layout.css
+++ b/src/AnyContent/CMCK/Modules/Backend/Core/Layout/views/layout.css
@@ -24,3 +24,11 @@ body {
     top: -211px;
     left: -231px;
 }
+
+/* make sure container gets centered in IE8 */
+.container{
+    width:92%;
+    margin:0 auto;
+    padding:10px;
+}
+
